--- a/views/Skills/new.ejs
+++ b/views/Skills/new.ejs
@@ -5,10 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/stylesheets/style.css">
-  <title><%= title %></title>
+  <title>Document</title>
 </head>
 <body>
-  <h1><%= title %></h1>
-  <a href="./skills">Skills List</a>
+  <body>
+    <h1>New Skills</h1>
+    <form action="/skills" method="POST" autocomplete="off">
+      <input type="text" name="name">
+      <button type="submit">Save To-Do</button>
+    </form>
+  </body>
 </body>
 </html>
