--- a/views/Skills/show.ejs
+++ b/views/Skills/show.ejs
@@ -5,10 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/stylesheets/style.css">
-  <title><%= title %></title>
+  <title>Document</title>
 </head>
 <body>
-  <h1><%= title %></h1>
-  <a href="./skills">Skills List</a>
+  <h1>Skills</h1>
+  <h2>Skill #<%= skill._id %></h2>
+  <h3><%= skill.name %></h3>
+  <p>Mastered: <%= skill.done ? 'Yes' : 'No' %></p>
+	<a href="/skills">Go back</a><br>
+  <a href="/skills/<%= skill._id %>/edit">Edit Skill</a>
 </body>
 </html>
