add delete skills functionality to individual skill pages

--- a/views/Skills/show.ejs
+++ b/views/Skills/show.ejs
@@ -10,9 +10,18 @@
 <body>
   <h1>Skills</h1>
   <h2>Skill #<%= skill._id %></h2>
+  <form 
+    action="/skills/<%= skill._id %>?_method=DELETE"
+    class="delete-form"
+    method="POST"
+    >
+    <button type="submit">Delete Skill</button>
+  </form>
   <h3><%= skill.name %></h3>
   <p>Mastered: <%= skill.done ? 'Yes' : 'No' %></p>
+  <p>Use Case: <%= skill.useCase %></p>
 	<a href="/skills">Go back</a><br>
   <a href="/skills/<%= skill._id %>/edit">Edit Skill</a>
+
 </body>
 </html>
