--- a/views/Skills/edit.ejs
+++ b/views/Skills/edit.ejs
@@ -11,7 +11,10 @@
   <body>
     <h1>Edit Skill</h1>
     <form action="/skills/<%= skill._id %>?_method=PUT" method="POST" autocomplete="off">
-      <input value="<%= skill.name %>" type="text" name="name">
+      <h3>Skill Name</h2>
+      <input value="<%= skill.name %>" type="text" name="name"><br>
+      <h3>Use Case</h2>
+      <input style="width:600px" style="height:300px" value="<%= skill.useCase %> " type="text" name="useCase"><br><br>
       <button type="submit">Update Skill</button>
     </form>
   </body>
