--- a/views/Skills/new.ejs
+++ b/views/Skills/new.ejs
@@ -11,9 +11,11 @@
   <body>
     <h1>New Skills</h1>
     <form action="/skills" method="POST" autocomplete="off">
-      <input type="text" name="name">
-      <button type="submit">Save To-Do</button>
+      <input value="Skill Name" type="text" name="name"><br>
+      <input style="width:300px" value="Use Case" type="text" name="useCase"><br><br>
+      <button type="submit">Save Skill</button>
     </form>
   </body>
 </body>
 </html>
+
