add ability to create and edit a skill to show whether it is mastered

--- a/views/Skills/index.ejs
+++ b/views/Skills/index.ejs
@@ -8,26 +8,25 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Skills as of <%= time %></h1>
+  <h1>Brandon's Dev Skills</h1>
   <ul>
     <% skills.forEach(skill => { %>
       <li>
-        <form 
-          action="/skills/<%= skill._id %>?_method=DELETE"
-          class="delete-form"
-          method="POST"
-        >
-        <button type="submit">X</button>
-        </form>
       <li>
-				<a href="/skills/<%= skill._id %>"><%= skill.name %></a> 
-				- 
-				<%= skill.mastered ? 'Yes' : 'No' %>
-			</li>
+				<h2><a href="/skills/<%= skill._id %>"><%= skill.name %></a></h2> 
+				<%= skill.mastered ? 'Mastered: Yes' : 'Mastered: No' %>
+        -
+        <%= skill.useCase %> 
+         <!-- ask question in lab review - how do i get this to update text -->
+         <form action="/skills/<%= skill._id %>?_method=PUT" method="POST" autocomplete="off"><br>
+          <button type="submit">Mark Skill as Mastered</button><br><br>
+          -----------
+        </form>
+			</li><br>
     <% }) %>
   </ul>
 
-  <a href="/skills/new">Add Skill</a><br>
+  <a href="/skills/new">Add Skill</a><br><br>
   <a href="/">Go Home</a>
 </body>
 </html>
