add welcome message to home page

--- a/views/Skills/index.ejs
+++ b/views/Skills/index.ejs
@@ -18,7 +18,7 @@
         -
         <%= skill.useCase %> 
          <!-- ask question in lab review - how do i get this to update text -->
-         <form action="/skills/<%= skill._id %>?_method=PUT" method="POST" autocomplete="off"><br>
+         <form action="/skills/<%= skill._id %>/edit"><br>
           <button type="submit">Mark Skill as Mastered</button><br><br>
           -----------
         </form>
