--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
 </head>
 <body>
   <h1>Dev Skills Homepage</h1>
+  <p>Welcome to my page! Click the link below to check out what dev skills I have.</p>
   <a href="./skills">Brandon's Dev Skill List</a>
 </body>
 </html>
