--- a/views/Skills/show.ejs
+++ b/views/Skills/show.ejs
@@ -20,7 +20,7 @@
   <h3><%= skill.name %></h3>
   <p>Mastered: <%= skill.mastered ? 'Yes' : 'No' %></p>
   <p>Use Case: <%= skill.useCase %></p>
-	<a href="/skills">Go back</a><br>
+	<a href="/skills">Go back</a><br><br>
   <a href="/skills/<%= skill._id %>/edit">Edit Skill</a>
 
 </body>
